SET(ITEMS
    ApplicationData
    CutConfigurationData
    CoreData
    SettingsData
    )

FOREACH(ITEM ${ITEMS})
    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qml")
        SET(QML_FILES ${QML_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qml")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qml")

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")
        SET(HEADERS ${HEADERS} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.hpp")

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.cpp")
        SET(SOURCES ${SOURCES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.cpp")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.cpp")

    IF (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qrc")
        SET(QRC_FILES ${QRC_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qrc")
    ENDIF(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ITEM}.qrc")

ENDFOREACH(ITEM)

SET(PROJECT_SOURCES ${PROJECT_SOURCES} ${SOURCES} CACHE INTERNAL "")
SET(PROJECT_HEADERS ${PROJECT_HEADERS} ${HEADERS} CACHE INTERNAL "")
SET(PROJECT_QML_FILES ${PROJECT_QML_FILES} ${QML_FILES} CACHE INTERNAL "")
SET(PROJECT_QRC_FILES ${PROJECT_QRC_FILES} ${QRC_FILES} CACHE INTERNAL "")

MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_SOURCES: ${PROJECT_SOURCES}")
MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_HEADERS: ${PROJECT_HEADERS}")
MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/PROJECT_QML_FILES: ${PROJECT_QML_FILES}")
MESSAGE("${CMAKE_CURRENT_SOURCE_DIR}/QRC_FILES: ${PROJECT_QRC_FILES}")

SET(SUB_FOLDERS
)

FOREACH(item ${SUB_FOLDERS})
    MESSAGE("Folder: " ${item})
    ADD_SUBDIRECTORY(${item})
ENDFOREACH(item)
